--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -89,6 +89,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=GetplayWEBproj3.war
+war.name=GetplayProj4.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
